services, placeholders, links

--- a/agora-angular/src/app/my-profile/my-product-list/my-product-list.component.html
+++ b/agora-angular/src/app/my-profile/my-product-list/my-product-list.component.html
@@ -17,7 +17,7 @@
             </p>
         </div>
         <div class="btn-group mx-2 mb-3">
-            <a href="/add-product" class="btn btn-primary w-75">
+            <a [routerLink]="['/add-product']" class="btn btn-primary w-75">
                 <fa-icon [icon]="faPlus"></fa-icon>
             </a>
         </div>
