--- a/agora-angular/src/app/nav/footer/footer.component.html
+++ b/agora-angular/src/app/nav/footer/footer.component.html
@@ -7,20 +7,20 @@
             <div class="col-6 col-md">
               <h5 class="fw-bold">Linkek</h5>
               <ul class="list-unstyled text-small">
-                <li><a class="link-secondary text-decoration-none" href="/">Kezdőlap</a></li>
-                <li><a class="link-secondary text-decoration-none" href="/search">Kategóriák</a></li>
-                <li><a class="link-secondary text-decoration-none" href="/best">A szezon legjobbjai</a></li>
-                <li><a class="link-secondary text-decoration-none" href="/about">Rólunk</a></li>
-                <li><a class="link-secondary text-decoration-none" href="/new">Újdonságok</a></li>
-                <li><a class="link-secondary text-decoration-none" href="#">Hírlevél</a></li>
+                <li><a class="link-secondary text-decoration-none" [routerLink]="['/']">Kezdőlap</a></li>
+                <li><a class="link-secondary text-decoration-none" [routerLink]="['/search']">Kategóriák</a></li>
+                <li><a class="link-secondary text-decoration-none" [routerLink]="['/best']">A szezon legjobbjai</a></li>
+                <li><a class="link-secondary text-decoration-none" [routerLink]="['/about']">Rólunk</a></li>
+                <li><a class="link-secondary text-decoration-none" [routerLink]="['/new']">Újdonságok</a></li>
+                <li><a class="link-secondary text-decoration-none" [routerLink]="['/']">Hírlevél</a></li>
               </ul>
             </div>
             <div class="col-6 col-md">
               <h5 class="fw-bold">Fiók</h5>
               <ul class="list-unstyled text-small">
-                <li><a class="link-secondary text-decoration-none" href="/login">Bejelentkezés</a></li>
-                <li><a class="link-secondary text-decoration-none" href="/signup">Regisztráció</a></li>
-                <li><a class="link-secondary text-decoration-none" href="/signup-vendor">Eladó regisztráció</a></li>
+                <li><a class="link-secondary text-decoration-none" [routerLink]="['/login']">Bejelentkezés</a></li>
+                <li><a class="link-secondary text-decoration-none" [routerLink]="['/signup']">Regisztráció</a></li>
+                <li><a class="link-secondary text-decoration-none" [routerLink]="['/signup-vendor']">Eladó regisztráció</a></li>
               </ul>
             </div>
           </div>
