--- a/agora-angular/src/app/account-forms/login/login.component.html
+++ b/agora-angular/src/app/account-forms/login/login.component.html
@@ -19,7 +19,7 @@
               <button type="submit" class="btn btn-primary w-100">Bejelentkezés</button>
           </div>
           <div class="text-center mb-0 pb-0">
-              <a class="btn small" href="/signup">Nincs fiókom</a>
+              <a class="btn small" [routerLink]="['/signup']">Nincs fiókom</a>
           </div>
       </form>
 </account-form>
