--- a/agora-angular/src/app/account-forms/signup-customer/signup-customer.component.html
+++ b/agora-angular/src/app/account-forms/signup-customer/signup-customer.component.html
@@ -21,7 +21,7 @@
             <button type="submit" [disabled]="!profileForm.valid" class="btn btn-primary w-100">Regisztráció</button>
         </div>
         <div class="text-center mb-0 pb-0">
-            <a class="btn small" href="/login">Már van fiókom</a>
+            <a class="btn small" [routerLink]="['/login']">Már van fiókom</a>
         </div>
     </form>
 </account-form>
