--- a/agora-angular/src/app/my-profile/my-profile.component.html
+++ b/agora-angular/src/app/my-profile/my-profile.component.html
@@ -12,7 +12,7 @@
                 <div class="col-5 col-md-7">
                     <div class="d-grid gap-1 d-flex justify-content-end mb-2">
                         <div class="btn-group">
-                            <a href="/edit-profile" class="btn btn-primary my-2 px-2">Szerkesztés</a>
+                            <a [routerLink]="['/edit-profile']" class="btn btn-primary my-2 px-2">Szerkesztés</a>
                         </div>
                     </div>
                 </div>
