--- a/agora-angular/src/app/product-detail/add-to-cart/add-to-cart.component.html
+++ b/agora-angular/src/app/product-detail/add-to-cart/add-to-cart.component.html
@@ -18,7 +18,7 @@
     </div>
     <div class="d-flex justify-content-between">
         <a (click)=back($event) href="#" class="btn btn-secondary mx-2">Vásárlás folytatása</a>
-        <a href="/cart" class="btn btn-primary mx-2">
+        <a [routerLink]="['/cart']" class="btn btn-primary mx-2">
             <fa-icon [icon]="faShoppingCart"></fa-icon>
             Kosár megtekintése
         </a>
