--- a/agora-angular/src/app/product-detail/product-detail.component.html
+++ b/agora-angular/src/app/product-detail/product-detail.component.html
@@ -7,7 +7,7 @@
             <li class="breadcrumb-item active" aria-current="page">{{product.name}}</li>
         </ol>
     </nav>
-    <div class="rounded shadow p-4 m-2">
+    <div class="rounded shadow p-4 m-2 placeholder-glow">
         <div class="row">
             <div class="col-12 col-md-6 col-lg-4">
                 <a (click)="fullScreenImg($event)" href="#">
@@ -28,11 +28,11 @@
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-8">
-                <h1 class="my-3">{{product.name}}</h1>
+                <h1 class="my-3" [ngClass]="{'placeholder col-8':product.name == ''}">{{product.name}}</h1>
                 <div class="row">
                     <div class="col-12 col-lg-6 m-2">
-                        <h1 class="fw-bold">{{product.price|price}}</h1>
-                        <p class="m-2">Elérhető: {{product.inventory}}db</p>
+                        <h1 class="fw-bold" [ngClass]="{'placeholder col-8':product.price == -1}">{{product.price|price}}</h1>
+                        <p class="m-2" [ngClass]="{'placeholder col-5':product.inventory == -1}">Elérhető: {{product.inventory}}db</p>
                     </div>
                     <div class="col-12 col-lg-6 my-2">
                         <a (click)="addToCart($event)" href="#" class="btn btn-primary m-2 py-3 w-50 shadow-sm">
@@ -81,7 +81,7 @@
                         <div class="shadow rounded px-4 pt-3 pb-2 m-2">
                             <div *ngFor="let tag of product.tags" class="row mx-auto">
                                 <div class="col-2 text-center">
-                                    <fa-icon [icon]="[iconPrefix, (tag|icon)]"></fa-icon> 
+                                    <fa-icon [icon]="[iconPrefix, (tag|icon)]"></fa-icon>
                                 </div>
                                 <div class="ps-0 col-10">
                                     <p>{{tag}}</p>
@@ -115,7 +115,8 @@
                                     <img src="assets/profilepic.jpg" class="round img-fluid">
                                 </div>
                                 <div class="col-8">
-                                    <h5><a href="/profile" class="text-decoration-none fw-bold">{{product.seller}}</a></h5>
+                                    <h5><a href="/profile" class="text-decoration-none fw-bold">{{product.seller}}</a>
+                                    </h5>
                                     <div class="btn-group">
                                         <a href="#" class="btn btn-primary my-2 px-3">Követés</a>
                                         <a href="#" class="btn btn-secondary my-2 pe-3">
@@ -142,29 +143,40 @@
         <hr>
         <div class="row">
             <h3>Értékelések</h3>
-            <h1 class="fw-bold big ms-3">4,7<small class="fw-normal small">/ 5</small></h1>
+            <h1 class="fw-bold big ms-3" [ngClass]="{'placeholder col-1':product.rating == -1}">{{product.rating}}<small class="fw-normal small">/ 5</small></h1>
             <div class="scrollmenu row">
-                <a href="#" *ngFor="let review of reviews" class="shadow rounded review m-2 col-12 col-md-6 text-decoration-none text-dark" (click)="openModal([review.id], $event)">
-                        <div class="row">
-                            <div class="col">
-                                <h5 class="m-2 fw-bold">{{review.title}}</h5>
-                            </div>
-                            <div class="text-end col-auto m-2 ps-0 ms-0">
-                                <small class="text-secondary">{{review.publishedAt|date}}</small>
+                <a href="#" *ngFor="let review of reviews"
+                    class="shadow rounded review m-2 col-12 col-md-6 text-decoration-none text-dark placeholder-glow"
+                    (click)="openModal([review.id], $event)">
+                    <div class="row">
+                        <div class="col">
+                            <h5 class="m-2 fw-bold" [ngClass]="{'placeholder col-8':review.title == ''}">
+                                {{review.title}}</h5>
+                        </div>
+                        <div class="text-end col-auto m-2 ps-0 ms-0">
+                            <small class="text-secondary">{{review.publishedAt|date}}</small>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="ms-2">
+                                <fa-icon *ngFor="let number of ratingToArray(review.rating)" [icon]="faStar"></fa-icon>
+                                <small class="ms-1"
+                                    [ngClass]="{'placeholder col-3':review.rating == 0}">{{review.rating}}/5</small>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col">
-                                <div class="ms-2">
-                                    <fa-icon *ngFor="let number of ratingToArray(review.rating)" [icon]="faStar"></fa-icon>
-                                    <small class="ms-1">{{review.rating}}/5</small>
-                                </div>
-                            </div>
-                            <div class="col text-end me-2 ps-0 ms-0">
-                                <small class="text-secondary">{{review.username}}</small>
-                            </div>
+                        <div class="col text-end me-2 ps-0 ms-0">
+                            <small class="text-secondary"
+                                [ngClass]="{'placeholder col-8':review.username == ''}">{{review.username}}</small>
                         </div>
-                        <p class="m-2">{{review.review|trim: 75}}</p>
+                    </div>
+                    <p class="m-2" [ngClass]="{'placeholder col-11':review.review == ''}">{{review.review|trim: 75}}</p>
+                    <p *ngIf="review.review == ''" class="mx-2 mb-2">
+                        <span class="placeholder col-4"></span>
+                        <span class="placeholder col-4"></span>
+                        <span class="placeholder col-4"></span>
+                        <span class="placeholder col-6"></span>
+                    </p>
                 </a>
             </div>
         </div>
@@ -185,12 +197,14 @@
     <app-product-list class="row" [products]="productList" [sideScrollable]="true"></app-product-list>
 </div>
 <page-footer></page-footer>
-<!-- Review detailed views -->
+<!-- Review detailed -->
 <modal-window [(modalVisible)]="modalVisible">
     <app-review [(content)]="reviewContent"></app-review>
 </modal-window>
+<!-- Képnézegető -->
 <modal-window [(modalVisible)]="imgOpen">
-    <img src="{{selectedImg}}" class="mx-auto d-block rounded img-fullscreen">
+    <img *ngIf="selectedImg == null" src="{{product.imgUrl[0]}}" class="mx-auto d-block rounded img-fullscreen">
+    <img *ngIf="selectedImg != null" src="{{selectedImg}}" class="mx-auto d-block rounded img-fullscreen">
     <a href="#" (click)="nextImg(-1,$event)" class="arrow-left ms-4 text-center frosted-glass text-dark">
         <fa-icon [icon]="faChevronLeft"></fa-icon>
     </a>
@@ -198,9 +212,11 @@
         <fa-icon [icon]="faChevronRight"></fa-icon>
     </a>
 </modal-window>
+<!-- Vélemény írása -->
 <modal-window [(modalVisible)]="newReviewOpen">
     <review-form (modalState)="closeNewReview()"></review-form>
 </modal-window>
+<!-- Kosárba -->
 <modal-window [(modalVisible)]="cartOpen">
     <add-to-cart (modalState)="cartOpen = false" [product]="product" [recommendedProducts]="productList"></add-to-cart>
 </modal-window>
