--- a/agora-angular/src/app/product-list/product-card/product-card.component.html
+++ b/agora-angular/src/app/product-list/product-card/product-card.component.html
@@ -1,14 +1,14 @@
 <div class="card my-3 shadow" [ngClass]="{'card-product':wide, 'card-narrow':!wide}">
     <div [ngClass]="{'img-placeholder':wide, 'img-placeholder-narrow':!wide}">
         <img *ngIf="imgUrl != ''" src="{{imgUrl}}" class="card-img-top" [ngClass]="{'img-product':wide, 'img-product-wide':!wide}" alt="...">
-        <svg *ngIf="imgUrl == ''" class="card-img-top img-placeholder">
+        <svg *ngIf="imgUrl == '' || imgUrl == null" class="card-img-top img-placeholder">
             <rect width="100%" height="100%" fill="#868e96"></rect>
         </svg>
     </div>
-    <div class="card-body card-body-product text-center">
-        <h5 class="card-title fw-bold" [class.fit-text]="name.length> 20">{{name}}</h5>
-        <p class="card-text text-primary m-1">{{seller}}</p>
-        <h4 class="m-0 fw-bold">{{price | price}}</h4>
+    <div class="card-body card-body-product text-center placeholder-glow">
+        <h5 class="card-title fw-bold" [ngClass]="{'placeholder col-10':name == ''}" [class.fit-text]="name.length> 20">{{name}}</h5>
+        <p class="card-text text-primary m-1" [ngClass]="{'placeholder col-6':seller == ''}">{{seller}}</p>
+        <h4 class="m-0 fw-bold" [ngClass]="{'placeholder col-7':price == -1}">{{price | price}}</h4>
     </div>
     <div class="btn-group mx-2 px-1 mb-3 bottom">
         <a [routerLink]="['/product-details']" class="btn btn-primary w-75">Részletek</a>
