--- a/agora-angular/src/app/product-detail/product-detail.component.html
+++ b/agora-angular/src/app/product-detail/product-detail.component.html
@@ -115,7 +115,7 @@
                                     <img src="assets/profilepic.jpg" class="round img-fluid">
                                 </div>
                                 <div class="col-8">
-                                    <h5><a href="/profile" class="text-decoration-none fw-bold">{{product.seller}}</a>
+                                    <h5><a [routerLink]="['/profile']" class="text-decoration-none fw-bold">{{product.seller}}</a>
                                     </h5>
                                     <div class="btn-group">
                                         <a href="#" class="btn btn-primary my-2 px-3">Követés</a>
