--- a/agora-angular/src/app/product-list/product-card/product-card.component.html
+++ b/agora-angular/src/app/product-list/product-card/product-card.component.html
@@ -1,17 +1,17 @@
 <div class="card my-3 shadow" [ngClass]="{'card-product':wide, 'card-narrow':!wide}">
     <div [ngClass]="{'img-placeholder':wide, 'img-placeholder-narrow':!wide}">
-        <img *ngIf="imgUrl != ''" src="{{imgUrl}}" class="card-img-top" [ngClass]="{'img-product':wide, 'img-product-wide':!wide}" alt="...">
-        <svg *ngIf="imgUrl == '' || imgUrl == null" class="card-img-top img-placeholder">
+        <img *ngIf="product.imgUrl != ''" src="{{product.imgUrl}}" class="card-img-top" [ngClass]="{'img-product':wide, 'img-product-wide':!wide}" alt="...">
+        <svg *ngIf="product.imgUrl == '' || product.imgUrl == null" class="card-img-top img-placeholder">
             <rect width="100%" height="100%" fill="#868e96"></rect>
         </svg>
     </div>
     <div class="card-body card-body-product text-center placeholder-glow">
-        <h5 class="card-title fw-bold" [ngClass]="{'placeholder col-10':name == ''}" [class.fit-text]="name.length> 20">{{name}}</h5>
-        <p class="card-text text-primary m-1" [ngClass]="{'placeholder col-6':seller == ''}">{{seller}}</p>
-        <h4 class="m-0 fw-bold" [ngClass]="{'placeholder col-7':price == -1}">{{price | price}}</h4>
+        <h5 class="card-title fw-bold" [ngClass]="{'placeholder col-10':product.name == ''}" [class.fit-text]="product.name.length> 20">{{product.name}}</h5>
+        <p class="card-text text-primary m-1" [ngClass]="{'placeholder col-6':product.seller == ''}">{{product.seller}}</p>
+        <h4 class="m-0 fw-bold" [ngClass]="{'placeholder col-7':product.price == -1}">{{product.price | price}}</h4>
     </div>
     <div class="btn-group mx-2 px-1 mb-3 bottom">
-        <a [routerLink]="['/product-details']" class="btn btn-primary w-75">Részletek</a>
+        <a [routerLink]="['/product-details', product.id]" class="btn btn-primary w-75">Részletek</a>
         <a href="#" class="btn btn-secondary w-25">
             <fa-icon [icon]="faShoppingCart"></fa-icon>
         </a>
