--- a/agora-angular/src/app/my-profile/product-form/product-form.component.html
+++ b/agora-angular/src/app/my-profile/product-form/product-form.component.html
@@ -84,7 +84,7 @@
                 <div class="shadow rounded px-4 pt-3 pb-2 m-2 card-preview">
                     <div *ngFor="let tag of newProduct.tags" class="row mx-auto">
                         <div class="col-2 text-center">
-                            <fa-icon [icon]="[iconPrefix, (tag|icon)]"></fa-icon> 
+                            <fa-icon [icon]="[iconPrefix, (tag|icon:'tag')]"></fa-icon> 
                         </div>
                         <div class="ps-0 col-10">
                             <p>{{tag}}</p>
