termék részletek adatbazisból

--- a/agora-angular/src/app/cart/cart.component.html
+++ b/agora-angular/src/app/cart/cart.component.html
@@ -10,7 +10,7 @@
                         </div>
                         <div class="col-8 col-lg-6">
                             <h5 class="fw-bold">{{product.name}}</h5>
-                            <a href="" class="text-decoration-none">{{product.seller}}</a>
+                            <a href="" class="text-decoration-none">{{product.sellerFirstName}}</a>
                             <p>{{product.delivery}}</p>
                         </div>
                         <div class="col-6 col-lg-2 mt-3">
