--- a/agora-angular/src/app/my-profile/my-product-list/my-product-list.component.html
+++ b/agora-angular/src/app/my-profile/my-product-list/my-product-list.component.html
@@ -32,7 +32,7 @@
         <div class="card-body card-body-product text-center">
             <h5 class="card-title fw-bold" [class.fit-text]="product.name.length> 20">{{product.name}}
             </h5>
-            <p class="card-text text-primary m-1">{{product.seller}}</p>
+            <p class="card-text text-primary m-1">{{product.sellerFirstName}}</p>
             <h4 class="m-0 fw-bold">{{product.price|price}}</h4>
         </div>
         <div class="btn-group mx-2 mb-3">
