--- a/agora-angular/src/app/my-profile/product-form/product-form.component.html
+++ b/agora-angular/src/app/my-profile/product-form/product-form.component.html
@@ -16,13 +16,13 @@
                 <div class="mb-3">
                     <label for="discount" class="form-label mb-1">Kedvezmény</label>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" formControlName="discountAvailable"
-                            [(ngModel)]="newProduct.discountAvailable" id="discountAvailable">
+                        <!-- <input class="form-check-input" type="checkbox" value="" formControlName="discountAvailable"
+                            [(ngModel)]="newProduct.discountAvailable" id="discountAvailable"> -->
                         <label class="form-check-label" for="discountAvailable">
                             Kedvezmény elérhető
                         </label>
                     </div>
-                    <input type="number" class="form-control" formControlName="discount" id="discount" [attr.disabled]="newProduct.discountAvailable ? null : true">
+                    <!-- <input type="number" class="form-control" formControlName="discount" id="discount" [attr.disabled]="newProduct.discountAvailable ? null : true"> -->
                 </div>
                 <div class="mb-3">
                     <label for="inventory" class="form-label mb-1">Raktáron <small>(db)</small></label>
