--- a/agora-angular/src/app/product-detail/review/review.component.html
+++ b/agora-angular/src/app/product-detail/review/review.component.html
@@ -1,22 +1,22 @@
-<div>
+<div class="placeholder-glow">
     <div class="col">
-        <h5 class="m-2 mb-0 fw-bold">{{content.title}}</h5>
+        <h5 class="m-2 mb-0 fw-bold" [ngClass]="{'placeholder col-8':content.title == ''}">{{content.title}}</h5>
     </div>
-    <small class="text-secondary ps-2">{{content.username}} |</small>
+    <small class="text-secondary ps-2" [ngClass]="{'placeholder col-4':content.userLastName == ''}">{{content.userLastName}} {{content.userFirstName}} |</small>
     <small class="text-secondary ms-2">{{content.publishedAt|date}}</small>
     <div class="col">
         <div class="ms-2">
             <fa-icon *ngFor="let number of ratingToArray(content.rating)" [icon]="faStar"></fa-icon>
-            <small class="ms-1">{{content.rating}}/5</small>
+            <small class="ms-1" [ngClass]="{'placeholder col-6':content.rating == -1}">{{content.rating}}/5</small>
         </div>
     </div>
-    <p class="m-2">{{content.review}}</p>
+    <p class="m-2" [ngClass]="{'placeholder col-11':content.content == ''}">{{content.content}}</p>
     <div class="m-2">
         <div class="nav">
             <button [@addUpvote]="content.points" [class.upvoted]="hasUpvoted" (click)="upvote()" class="btn me-2" type="button">
                 <fa-icon [icon]="faArrowUp"></fa-icon>
             </button>
-            <h5 class="pt-2 pe-2">{{content.points}}</h5>
+            <h5 class="pt-2 pe-2" [ngClass]="{'placeholder col-2':content.points == -1}">{{content.points}}</h5>
             <button [@addDownvote]="content.points" [class.downvoted]="hasDownvoted" (click)="downvote()" class="btn" type="button">
                 <fa-icon [icon]="faArrowDown"></fa-icon>
             </button>
