get user, get all products

--- a/agora-angular/src/app/my-profile/edit-profile/edit-profile.component.html
+++ b/agora-angular/src/app/my-profile/edit-profile/edit-profile.component.html
@@ -14,7 +14,7 @@
             <div class="row">
                 <div class="col-7 col-md-5">
                     <label for="name">Név </label>
-                    <input type="text" value="{{profileDetail.name}}" class="m-2 form-control" id="name" name="name">
+                    <input type="text" value="{{profileDetail.lastName}} {{profileDetail.firstName}}" class="m-2 form-control" id="name" name="name">
                 </div>
                 <div class="col-5 col-md-7">
                     <div class="d-grid gap-1 d-flex justify-content-end mb-2">
