--- a/agora-angular/src/app/my-profile/my-profile.component.html
+++ b/agora-angular/src/app/my-profile/my-profile.component.html
@@ -7,7 +7,7 @@
         <div class="shadow rounded px-4 pt-5 pb-2 about">
             <div class="row">
                 <div class="col-7 col-md-5">
-                    <h4 class="fw-bold m-2">{{profileDetail.name}}</h4>
+                    <h4 class="fw-bold m-2">{{profileDetail.lastName}} {{profileDetail.firstName}}</h4>
                 </div>
                 <div class="col-5 col-md-7">
                     <div class="d-grid gap-1 d-flex justify-content-end mb-2">
