--- a/agora-angular/src/app/product-detail/product-detail.component.html
+++ b/agora-angular/src/app/product-detail/product-detail.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="search" class="text-decoration-none">Kategóriák</a></li>
+            <li class="breadcrumb-item"><a [routerLink]="['/search']" class="text-decoration-none">Kategóriák</a></li>
             <li class="breadcrumb-item"><a href="#" class="text-decoration-none">Ékszerek</a></li>
             <li class="breadcrumb-item"><a href="#" class="text-decoration-none">Nyakláncok</a></li>
             <li class="breadcrumb-item active" aria-current="page">{{product.name}}</li>
@@ -116,10 +116,10 @@
                         <div class="shadow rounded px-4 pt-3 pb-2 m-2 my-3">
                             <div class="row">
                                 <div class="col-4">
-                                    <img src="assets/profilepic.jpg" class="round img-fluid">
+                                    <img src="{{seller.profileImgUrl}}" class="round img-fluid">
                                 </div>
                                 <div class="col-8">
-                                    <h5><a [routerLink]="['/profile']" class="text-decoration-none fw-bold">{{product.sellerLastName}} {{product.sellerFirstName}}</a>
+                                    <h5><a [routerLink]="['/profile', product.sellerId]" class="text-decoration-none fw-bold">{{product.sellerLastName}} {{product.sellerFirstName}}</a>
                                     </h5>
                                     <div class="btn-group">
                                         <a href="#" class="btn btn-primary my-2 px-3">Követés</a>
