get user profile, test data

--- a/agora-angular/src/app/my-profile/my-profile.component.html
+++ b/agora-angular/src/app/my-profile/my-profile.component.html
@@ -36,7 +36,7 @@
                     <h5 class="fw-bold m-2">{{profileDetail.followers}} <small class="fw-normal">követő</small></h5>
                 </div>
                 <div class="col-5 col-md-3 col-lg-2">
-                    <h5 class="fw-bold m-2">{{profileDetail.follows}} <small class="fw-normal">követ</small></h5>
+                    <h5 class="fw-bold m-2">{{profileDetail.following}} <small class="fw-normal">követ</small></h5>
                 </div>
             </div>
             <div class="row">
