--- a/agora-angular/src/app/profile-page/profile-page.component.html
+++ b/agora-angular/src/app/profile-page/profile-page.component.html
@@ -39,7 +39,7 @@
                     <h5 class="fw-bold m-2">{{user.followers}} <small class="fw-normal">követő</small></h5>
                 </div>
                 <div class="col-5 col-md-3 col-lg-2">
-                    <h5 class="fw-bold m-2">{{user.follows}} <small class="fw-normal">követ</small></h5>
+                    <h5 class="fw-bold m-2">{{user.following}} <small class="fw-normal">követ</small></h5>
                 </div>
             </div>
             <div class="row">
