--- a/agora-angular/src/app/account-forms/login/login.component.html
+++ b/agora-angular/src/app/account-forms/login/login.component.html
@@ -1,14 +1,15 @@
 <account-form>
       <h2 class="text-center mb-3">Belépés</h2>
-      <form>
+      <form (ngSubmit)="login()">
           <div class="mb-3">
-              <label for="email" class="form-label mb-1">Email cím</label>
-              <input type="text" class="form-control short" formControlName="email" id="email">
+              <label for="userEmail" class="form-label mb-1">Email cím</label>
+              <input type="text" class="form-control short" name="userEmail" id="userEmail">
           </div>
           <div class="mb-1">
               <label for="password" class="form-label mb-1">Jelszó</label>
-              <input type="password" class="form-control short" formControlName="password" id="password" placeholder="">
+              <input type="password" class="form-control short" name="password" id="password" placeholder="">
           </div>
+          
           <div class="form-check mb-2 mt-0">
             <input class="form-check-input" type="checkbox" value="" id="remember-me">
             <label class="form-check-label" for="remember-me">
@@ -16,8 +17,12 @@
             </label>
           </div>
           <div class="mb-3">
-              <button type="submit" class="btn btn-primary w-100">Bejelentkezés</button>
+              <button type="submit" class="btn btn-primary w-100">
+                 
+                    Bejelentkezés
+                </button>
           </div>
+          
           <div class="text-center mb-0 pb-0">
               <a class="btn small" [routerLink]="['/signup']">Nincs fiókom</a>
           </div>
