get user sql fix

--- a/agora-angular/src/app/product-detail/product-detail.component.html
+++ b/agora-angular/src/app/product-detail/product-detail.component.html
@@ -25,6 +25,9 @@
                     <p class="text-justify">
                         {{product.description}}
                     </p>
+                    <small class="text-secondary">
+                        Közzétéve: {{product.publishedAt|date}}
+                    </small>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-8">
@@ -79,6 +82,9 @@
                             <p class="">
                                 {{product.description}}
                             </p>
+                            <small class="text-secondary">
+                                Közzétéve: {{product.publishedAt|date}}
+                            </small>
                         </div>
                     </div>
                     <div class="col-12 col-lg-6">
