--- a/agora-angular/src/app/modal/modal.component.scss
+++ b/agora-angular/src/app/modal/modal.component.scss
@@ -7,6 +7,8 @@
     min-width: 18rem;
     max-width: 85%;
     max-height: 90%;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 .modal-background{
     z-index: 9;
@@ -16,3 +18,24 @@
     left: 0;
     bottom: 0;
 }
+/* width */
+::-webkit-scrollbar {
+    height: .6rem;
+    width: .6rem;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: .3rem;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
