--- a/agora-angular/src/app/profile-page/profile-page.component.html
+++ b/agora-angular/src/app/profile-page/profile-page.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid header" style="background-image: url('../../{{user.headerImgUrl}}');"></div>
-<div class="container">
+<div class="container page">
     <div class="d-grid justify-content-md-center">
         <div class="round profile-picture ms-4 mt-4 bg-white shadow">
             <img class="p-2 round profile-picture" src="{{user.profileImgUrl}}" alt="">
@@ -57,15 +57,15 @@
     </div>
     <div class="d-grid justify-content-md-center border-bottom mt-3 mb-2">
         <ul class="nav col-12 col-md-auto justify-content-center">
-            <li><a (click)="tabOpen = 1" [ngClass]="{'border-bottom border-dark fw-bold':(tabOpen == 1)}"
-                    class="nav-link-selectable nav-link px-2 link-dark">Termékek</a></li>
-            <li><a (click)="tabOpen = 2" [ngClass]="{'border-bottom border-dark fw-bold':(tabOpen == 2)}"
-                    class="nav-link-selectable nav-link px-2 link-dark">Kívánság lista</a></li>
+            <li><a href="" (click)="tabOpen = 1; $event.preventDefault();" [ngClass]="{'fw-bold':(tabOpen == 1)}"
+                    class="nav-link-selectable nav-link px-2 link-dark">Termékek</a><div [@tabChange]="tabOpen" [ngClass]="{'border-bottom border-dark':(tabOpen == 1)}"></div></li>
+            <li><a href="" (click)="tabOpen = 2; $event.preventDefault();" [ngClass]="{'fw-bold':(tabOpen == 2)}"
+                    class="nav-link-selectable nav-link px-2 link-dark">Kívánság lista</a><div [@tabChange]="tabOpen" [ngClass]="{'border-bottom border-dark':(tabOpen == 2)}"></div></li>
         </ul>
     </div>
     <!-- <h3 class="m-3 pt-2">Termékek</h3>
     <hr> -->
-    <div *ngIf="tabOpen == 1">
+    <div [@visibilityChange] *ngIf="tabOpen == 1">
         <form action="" [formGroup]="searchForm">
             <div class="row d-flex justify-content-between">
                 <div class="col-12 col-md-4 mt-2">
@@ -79,8 +79,13 @@
             </div>
         </form>
         <app-product-list [products]="products"></app-product-list>
+        <div *ngIf="!products[0]" class="text-center mt-4 pt-4">
+            <h1><fa-icon [icon]="faTimesCircle"></fa-icon></h1>
+            <h2>Nem találtunk termékeket</h2>
+            <p>amit keresel nics itt</p>
+        </div>
     </div>
-    <div *ngIf="tabOpen == 2">
+    <div [@visibilityChange] *ngIf="tabOpen == 2">
         <div class="mx-5">
             <div *ngFor="let product of products" class="border-bottom">
                 <div class="row p-2 pb-0 mt-2">
