--- a/agora-angular/src/app/my-profile/product-form/product-form.component.html
+++ b/agora-angular/src/app/my-profile/product-form/product-form.component.html
@@ -5,24 +5,22 @@
             <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
                 <div class="mb-3">
                     <label for="name" class="form-label mb-1">Termék megnevezése</label>
-                    <input type="text" class="form-control" formControlName="name" id="name"
-                        >
+                    <input type="text" class="form-control" formControlName="name" id="name" (keyup)="inputChange()">
                 </div>
                 <div class="mb-3">
                     <label for="price" class="form-label mb-1">Ár <small>(HUF)</small></label>
-                    <input type="number" class="form-control" formControlName="price" id="price"
-                        >
+                    <input type="number" class="form-control" formControlName="price" id="price" (keyup)="inputChange()" step="1" min="0">
                 </div>
                 <div class="mb-3">
                     <label for="discount" class="form-label mb-1">Kedvezmény</label>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox"
-                            [value]="discountAvailable" id="discountAvailable">
+                            (change)="discountAvailable = !discountAvailable" id="discountAvailable">
                         <label class="form-check-label" for="discountAvailable">
                             Kedvezmény elérhető
                         </label>
                     </div>
-                    <input type="number" class="form-control" formControlName="discount" id="discount" [attr.disabled]="discountAvailable ? null : true">
+                    <input type="number" class="form-control" formControlName="discount" id="discount" [attr.disabled]="discountAvailable ? null : true" (change)="inputChange" step="1" max="99" min="0">
                 </div>
                 <div class="mb-3">
                     <label for="inventory" class="form-label mb-1">Raktáron <small>(db)</small></label>
@@ -47,10 +45,14 @@
                 <div class="mb-3">
                     <div formArrayName="tags">
                         <label class="mb-2">Címkék</label> <br>
-                        <div *ngFor="let tag of tags.controls; let i=index">
-                            <!-- <label for="alias-{{ i }}">Címke:</label> -->
-                            <input id="tag-{{ i }}" type="text" class="form-control mb-2" [formControlName]="i"
-                                >
+                        <div *ngIf="productForm.value.tags">
+                            <div *ngFor="let tag of tags.controls; let i=index" class="d-flex justify-content-between">
+                                <!-- <label for="tag-{{ i }}">Címke:</label> -->
+                                <input id="tag-{{ i }}" type="text" class="form-control mb-2" [formControlName]="i">
+                                <a class="text-decoration-none text-center m-2" (click)="removeTag(i, $event)">
+                                    <fa-icon [icon]="faTrash"></fa-icon>
+                                </a>
+                            </div>
                         </div>
                         <button (click)="addTag()" type="button" class="btn btn-primary">+ Címke hozzáadása</button>
                     </div>
@@ -58,9 +60,13 @@
                 <div class="mb-3">
                     <div formArrayName="materials">
                         <label class="mb-2">Alapanyagok</label> <br>
-                        <div *ngFor="let material of materials.controls; let i=index">
-                            <input id="material-{{ i }}" type="text" class="form-control mb-2" [formControlName]="i"
-                                >
+                        <div *ngIf="productForm.value.materials">
+                            <div *ngFor="let material of materials.controls; let i=index" class="d-flex justify-content-between">
+                                <input id="material-{{ i }}" type="text" class="form-control mb-2" [formControlName]="i">
+                                <a class="text-decoration-none text-center m-2" (click)="removeMaterial(i, $event)">
+                                    <fa-icon [icon]="faTrash"></fa-icon>
+                                </a>
+                            </div>
                         </div>
                         <button (click)="addMaterial()" type="button" class="btn btn-primary">+ Alapanyag hozzáadása</button>
                     </div>
@@ -78,7 +84,7 @@
         <div class="col-12 col-md-5 p-3 border-start">
             <h4 class="text-center">Előnézet</h4>
             <div class="d-flex justify-content-center">
-                <product-card [product]="asd"></product-card>
+                <product-card [product]="newProduct"></product-card>
             </div>
             <div *ngIf="productForm.value.tags" class="d-flex justify-content-center">
                 <div class="shadow rounded px-4 pt-3 pb-2 m-2 card-preview">
@@ -98,7 +104,7 @@
                 <div class="shadow rounded px-4 pt-3 pb-2 m-2 card-preview">
                     <div class="row mx-auto">
                         <div class="col-2 text-center">
-                            <!-- <fa-icon [icon]="faGem"></fa-icon> -->
+                            <fa-icon [icon]="[iconPrefix, (productForm.value.category|icon:'category')]"></fa-icon>
                         </div>
                         <div class="ps-0 col-10">
                             <p>Kategória: {{productForm.value.category}}</p>
